src/objects/Group_Article__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel</label>
        <referenceTo>Sales_Channel__c</referenceTo>
        <relationshipLabel>Group Articles</relationshipLabel>
        <relationshipName>Group_Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cloned_Record_ID__c</fullName>
        <label>Cloned Record ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Article_URL__c</fullName>
        <label>Custom Article URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Custom_URL__c</fullName>
        <description>URL specific to this Client in relation to the connected Article.  Displays on public FAQ site.</description>
        <inlineHelpText>URL specific to this Client in relation to the connected Article.  Displays on public FAQ site.</inlineHelpText>
        <label>Custom URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <formula>Knowledge_Group__r.Group_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Common_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Common Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Default_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Knowledge_Article_ID__c</fullName>
        <label>Knowledge Article ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knowledge_Description__c</fullName>
        <label>Knowledge Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Knowledge_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Knowledge Group</label>
        <referenceTo>Knowledge_Group__c</referenceTo>
        <relationshipLabel>Related Articles</relationshipLabel>
        <relationshipName>Group_Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Knowledge_LastPublishedDate__c</fullName>
        <label>Knowledge LastPublishedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Knowledge_Summary__c</fullName>
        <label>Knowledge Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Knowledge_Title__c</fullName>
        <label>Knowledge Title</label>
        <length>222</length>
        <type>Text</type>
    </fields>
    <label>Group Article</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Knowledge_Title__c</columns>
        <columns>Knowledge_Article_ID__c</columns>
        <columns>Knowledge_Description__c</columns>
        <columns>Knowledge_LastPublishedDate__c</columns>
        <columns>Group_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GA - {00000}</displayFormat>
        <label>Group Article Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>